# legal-mind-rag

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_all.bat  run_backend_8001.bat  run_frontend.bat
Frontend/: index.html  package-lock.json  package.json  server.mjs  styles.css  tailwind.config.js
Frontend/src/: App.jsx  index.css  main.js  main.jsx  router.js  store.js
app/: main.py
app/core/: config.py
app/database/: session.py
app/models/: __init__.py  chat.py  (+6 more)
docs/: 01_concept_and_requirements.md  01_기획_및_요구사항.md  02_system_architecture.md  02_시스템_아키텍처.md  03_data_design_spec.md  03_데이터_및_RAG_설계.md  04_frontend_plan.md  05_troubleshooting_log.md  06_evaluation_report.md  06_실험_및_평가_보고서.md  07_제품_요구사항_문서.md  08_기능_요구_정의서.md  09_테이블_정의서.md  10_개발_계획.md  11_트러블슈팅_요약.md  PLAN.md
scripts/: _check_chat_columns.py  _check_pg_columns.py  _clear_chat_rows.py  _dump_sqlite_schema.py  _fix_chat_user_nullable.py  _inspect_chat_constraints.py  _inspect_columns2.py  _inspect_counts.py  _inspect_message_text.py  _inspect_pg_schema.py  _list_tables.py  _orm_check_docs.py  _orm_verify_chat_fresh.py  _print_schema.py  _raw_check_docs.py  _raw_verify_chat.py  _reset_doc_tables.py  _run_chat_test.py  _search_source_check.py  _smoke_chat_service.py  _smoke_rerank.py  _smoke_search_signals.py  _verify_chat_rows.py  _verify_db_load.py  compare_search_results.py  eval_expected_results.md  eval_questions.txt  ingest_raw_documents.py  sqlite_schema_dump.json  sqlite_schema_pretty.txt
tests/: test_chat_api.py  test_chat_service.py  test_search_tuning.py
(+48 files in other folders)
