[project]
name = "legal-mind-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi-pagination>=0.15.11",
    "fastapi[standard]>=0.135.2",
    "openai>=2.29.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.12.1",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
